@@ -1,6 +1,6 @@
 {
   "name": "The Ellogon Annotation Platform",
-  "version": "3.3.0",
+  "version": "3.3.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --ssl false",
