@@ -8,3 +8,16 @@ export interface Collection {
   name: string;
   owner_id?: number;
 }
+
+export interface SharedCollectionInformation {
+  id:              number;
+  confirmed:       boolean;
+  created_at:      string;
+  updated_at:      string;
+  collection_id:   number;
+  collection_name: string;
+  from_email:      string;
+  to_email:        string;
+}
+
+export interface SharedCollectionsInformation extends Array<SharedCollectionInformation>{}
